chore: cleanup redundant files and fix import paths
- Delete duplicate test scripts (check_db.js, prisma.config.*)
- Move check_db.ts to tools directory
- Fix logger import paths across multiple files
- Remove hardcoded DATABASE_URL from Dockerfile
- Update .gitignore to protect compose.stable.yaml

--- a/.gitignore
+++ b/.gitignore
@@ -766,7 +766,7 @@ compose.dev.yaml
 compose.test.yaml
 compose.edge.yaml
 compose.dev.yaml.bak
-compose.example.yaml
+compose.stable.yaml
 
 # Strict Ignores for NapGram
 main/data/
