--- a/main/package.json
+++ b/main/package.json
@@ -34,6 +34,7 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/static": "^8.3.0",
     "@kitajs/html": "^4.2.11",
+    "@lottie2img/main": "^0.1.0",
     "@mtcute/core": "^0.27.2",
     "@mtcute/dispatcher": "^0.27.2",
     "@mtcute/node": "^0.27.2",
@@ -46,7 +47,6 @@
     "prisma": "7.1.0",
     "sharp": "0.34.5",
     "silk-wasm": "^3.7.1",
-    "tgs-to": "^1.0.7",
     "zod": "^3.25.76"
   },
   "engines": {
