--- a/main/package.json
+++ b/main/package.json
@@ -31,6 +31,7 @@
     "vitest": "^4.0.15"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.1.0",
     "@fastify/static": "^8.3.0",
     "@kitajs/html": "^4.2.11",
