feat: implement Phase 2-4 advanced features
Phase 2: Advanced Group Management
- Add full group mute (muteall/unmuteall)
- Add admin management (admin/unadmin)
- Add group name modification (groupname)
- Add special title assignment (title)
- Extend IQQClient interface with new methods
- Implement AdvancedGroupManagementCommandHandler

Phase 3: Request Handling & QQ Interactions
- Add friend/group request management (pending/approve/reject)
- Add QQ request database model (QQRequest)
- Add QQ like feature (like)
- Add group honor info (honor)
- Implement RequestHandlerFeature for event handling
- Implement RequestManagementCommandHandler
- Extend QQInteractionCommandHandler with new features

Phase 4: Automation & Statistics
- Add RequestAutomationService with auto-cleanup (7-day expiry)
- Add automation rules (blacklist/whitelist/keyword)
- Add AutomationRule and RequestStatistics models
- Add request statistics command (reqstats)
- Add batch operations (approveall/rejectall)
- Implement rule-based auto-approval/rejection

Database:
- Add QQRequest model for request persistence
- Add AutomationRule model for automation config
- Add RequestStatistics model for aggregated stats
- Add proper indexes for performance

Testing:
- Add comprehensive test suites for all handlers
- Add utility function tests (duration-parser, permission-checker)

All commands include Chinese aliases and comprehensive error handling.

--- a/main/package.json
+++ b/main/package.json
@@ -6,11 +6,13 @@
     "dev": "tsx watch --env-file=.env src/index.ts",
     "build": "tsx build.ts",
     "type-check": "tsc --noEmit",
+    "pretype-check": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate",
+    "postinstall": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate",
     "start": "prisma migrate deploy && node --enable-source-maps build/index.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
-    "pretest": "DATABASE_URL=postgres://user:pass@localhost:5432/db pnpm exec prisma generate",
+    "pretest": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate",
     "prisma": "prisma",
     "import": "ts-node tools/import"
   },
