--- a/main/package.json
+++ b/main/package.json
@@ -39,6 +39,7 @@
     "@fastify/cors": "^11.2.0",
     "@fastify/static": "^8.3.0",
     "@kitajs/html": "^4.2.11",
+    "@koishijs/core": "^4.18.9",
     "@mtcute/core": "^0.27.4",
     "@mtcute/dispatcher": "^0.27.4",
     "@mtcute/markdown-parser": "^0.27.4",
@@ -53,6 +54,7 @@
     "prisma": "7.1.0",
     "silk-wasm": "^3.7.1",
     "ws": "^8.18.3",
+    "yaml": "^2.8.2",
     "zod": "^4.2.1"
   },
   "engines": {
