--- a/main/package.json
+++ b/main/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@napgram/core",
+  "name": "@napgram/app",
   "version": "0.0.7",
   "type": "module",
   "scripts": {
@@ -22,7 +22,6 @@
   ],
   "devDependencies": {
     "@kitajs/ts-html-plugin": "^4.1.3",
-    "@koishijs/core": "^4.18.9",
     "@types/ejs": "^3.1.5",
     "@types/markdown-escape": "^1.1.3",
     "@types/node": "^25.0.3",
