--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "napgram-root",
     "private": true,
     "scripts": {
-        "postinstall": "node -e \"const fs=require('fs'); const {execSync}=require('child_process'); if(fs.existsSync('main/prisma/schema.prisma')){ const env={...process.env, DATABASE_URL: process.env.DATABASE_URL||'postgresql://dummy'}; execSync('pnpm --filter @napgram/core exec prisma generate --no-hints',{stdio:'inherit', env}); }\""
+        "postinstall": "node -e \"const fs=require('fs'); const {execSync}=require('child_process'); if(fs.existsSync('main/prisma/schema.prisma')){ const env={...process.env, DATABASE_URL: process.env.DATABASE_URL||'postgresql://dummy'}; execSync('pnpm --filter @napgram/app exec prisma generate --no-hints',{stdio:'inherit', env}); }\""
     },
     "pnpm": {
         "onlyBuiltDependencies": [
