--- a/packages/plugin-qq-interaction/package.json
+++ b/packages/plugin-qq-interaction/package.json
@@ -2,8 +2,16 @@
     "name": "@napgram/plugin-qq-interaction",
     "version": "1.0.0",
     "description": "NapGram QQ interaction plugin: poke, nick, like, honor",
-    "main": "dist/index.js",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "type": "module",
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js"
+        },
+        "./package.json": "./package.json"
+    },
     "scripts": {
         "build": "tsc -p tsconfig.json",
         "dev": "tsc -p tsconfig.json --watch"
