--- a/main/package.json
+++ b/main/package.json
@@ -33,6 +33,8 @@
     "@mtcute/dispatcher": "^0.27.4",
     "@mtcute/markdown-parser": "^0.27.4",
     "@mtcute/node": "^0.27.4",
+    "@napgram/qq-client": "workspace:*",
+    "@napgram/telegram-client": "workspace:*",
     "@naplink/naplink": "^0.0.3",
     "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "7.2.0",
