--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -16,6 +16,10 @@
       "@napgram/feature-kit": ["../packages/feature-kit/src/index.ts"],
       "@napgram/gateway-kit": ["../packages/gateway-kit/src/index.ts"],
       "@napgram/infra-kit": ["../packages/infra-kit/src/index.ts"],
+      "@napgram/auth-kit": ["../packages/auth-kit/src/index.ts"],
+      "@napgram/media-kit": ["../packages/media-kit/src/index.ts"],
+      "@napgram/message-kit": ["../packages/message-kit/src/index.ts"],
+      "@napgram/marketplace-kit": ["../packages/marketplace-kit/src/index.ts"],
       "@napgram/request-kit": ["../packages/request-kit/src/index.ts"],
       "@napgram/runtime-kit": ["../packages/runtime-kit/src/index.ts"],
       "@napgram/web-interfaces": ["../packages/web-interfaces/src/index.ts"]
