--- a/main/package.json
+++ b/main/package.json
@@ -38,6 +38,7 @@
     "@naplink/naplink": "^0.0.3",
     "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "7.2.0",
+    "@sentry/node": "^10.32.1",
     "fastify": "^5.6.2",
     "fflate": "^0.8.2",
     "file-type": "^21.2.0",
