--- a/packages/plugin-forward/tsconfig.json
+++ b/packages/plugin-forward/tsconfig.json
@@ -1,19 +1,20 @@
 {
+    "extends": "../../tsconfig.base.json",
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ES2022",
-        "lib": [
-            "ES2022"
-        ],
         "outDir": "./dist",
         "rootDir": "./src",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "declaration": true
+        "baseUrl": ".",
+        "paths": {
+            "@napgram/plugin-forward": [
+                "./src/index.ts"
+            ],
+            "@napgram/sdk": [
+                "../../external/sdk/packages/sdk/src/index.ts"
+            ],
+            "@napgram/feature-kit": [
+                "../feature-kit/src/index.ts"
+            ]
+        }
     },
     "include": [
         "src/**/*"
