--- a/packages/web-interfaces/tsconfig.json
+++ b/packages/web-interfaces/tsconfig.json
@@ -1,27 +1,25 @@
 {
+    "extends": "../../tsconfig.base.json",
     "compilerOptions": {
-        "target": "ES2022",
-        "module": "ES2022",
-        "lib": [
-            "ES2022"
-        ],
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "baseUrl": ".",
+        "paths": {
+            "@napgram/web-interfaces": [
+                "./src/index.ts"
+            ],
+            "@napgram/infra-kit": [
+                "../infra-kit/src/index.ts"
+            ],
+            "@napgram/runtime-kit": [
+                "../runtime-kit/src/index.ts"
+            ]
+        },
         "plugins": [
             {
                 "name": "@kitajs/ts-html-plugin"
             }
-        ],
-        "jsx": "react",
-        "jsxFactory": "Html.createElement",
-        "jsxFragmentFactory": "Html.Fragment",
-        "outDir": "./dist",
-        "rootDir": "./src",
-        "strict": true,
-        "esModuleInterop": true,
-        "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "declaration": true
+        ]
     },
     "include": [
         "src/**/*"
