--- a/packages/auth-kit/package.json
+++ b/packages/auth-kit/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Authentication utilities for NapGram",
     "main": "./dist/index.js",
-            "types": "./src/index.ts",
+    "types": "./src/index.ts",
     "type": "module",
     "exports": {
         ".": {
@@ -27,6 +27,7 @@
         "fastify": "^5.6.2"
     },
     "devDependencies": {
+        "@fastify/cookie": "^11.0.2",
         "@types/node": "^25.0.3",
         "typescript": "^5.9.3"
     }
