--- a/packages/gateway-kit/package.json
+++ b/packages/gateway-kit/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Gateway exports for NapGram",
     "main": "./dist/index.js",
-            "types": "./src/index.ts",
+    "types": "./src/index.ts",
     "type": "module",
     "exports": {
         ".": {
@@ -33,6 +33,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/node": "^25.0.3",
+        "@types/ws": "^8.18.1",
         "typescript": "^5.9.3"
     }
 }
