build: add missing workspace dependencies across packages
- Add @napgram/infra-kit to auth-kit, media-kit, marketplace-kit
- Add @napgram/infra-kit to gateway-kit, request-kit
- Add @napgram/runtime-kit to feature-kit
- Fix dependency resolution for workspace packages

--- a/packages/auth-kit/package.json
+++ b/packages/auth-kit/package.json
@@ -24,7 +24,8 @@
     "author": "NapGram Team",
     "license": "MIT",
     "dependencies": {
-        "fastify": "^5.6.2"
+        "fastify": "^5.6.2",
+        "@napgram/infra-kit": "workspace:*"
     },
     "devDependencies": {
         "@fastify/cookie": "^11.0.2",
