--- a/packages/feature-kit/package.json
+++ b/packages/feature-kit/package.json
@@ -15,7 +15,8 @@
     },
     "scripts": {
         "build": "tsc -p tsconfig.json",
-        "dev": "tsc -p tsconfig.json --watch"
+        "dev": "tsc -p tsconfig.json --watch",
+        "test": "vitest run"
     },
     "keywords": [
         "napgram",
@@ -29,7 +30,9 @@
         "@mtcute/node": "^0.27.4",
         "file-type": "^21.2.0",
         "image-js": "^1.3.0",
-        "@napgram/message-kit": "workspace:*"
+        "@napgram/message-kit": "workspace:*",
+        "@napgram/infra-kit": "workspace:*",
+        "@napgram/runtime-kit": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^25.0.3",
