--- a/packages/infra-kit/package.json
+++ b/packages/infra-kit/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Infrastructure exports for NapGram plugins",
     "main": "./dist/index.js",
-            "types": "./src/index.ts",
+    "types": "./src/index.ts",
     "type": "module",
     "exports": {
         ".": {
@@ -23,8 +23,16 @@
     ],
     "author": "NapGram Team",
     "license": "MIT",
+    "dependencies": {
+        "@prisma/adapter-pg": "7.2.0",
+        "@prisma/client": "7.2.0",
+        "pg": "^8.16.3",
+        "zod": "^3.24.1"
+    },
     "devDependencies": {
         "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/pg": "^8.16.0",
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.16"
     }
 }
