--- a/packages/marketplace-kit/package.json
+++ b/packages/marketplace-kit/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Marketplace and installer utilities for NapGram plugins",
     "main": "./dist/index.js",
-            "types": "./src/index.ts",
+    "types": "./src/index.ts",
     "type": "module",
     "exports": {
         ".": {
@@ -26,7 +26,8 @@
     "license": "MIT",
     "dependencies": {
         "fflate": "^0.8.2",
-        "yaml": "^2.8.2"
+        "yaml": "^2.8.2",
+        "@napgram/infra-kit": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^25.0.3",
