--- a/packages/message-kit/package.json
+++ b/packages/message-kit/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Message conversion pipeline for NapGram",
     "main": "./dist/index.js",
-            "types": "./src/index.ts",
+    "types": "./src/index.ts",
     "type": "module",
     "exports": {
         ".": {
@@ -27,7 +27,10 @@
     "dependencies": {
         "@mtcute/core": "^0.27.4",
         "file-type": "^21.2.0",
-        "image-js": "^1.3.0"
+        "image-js": "^1.3.0",
+        "@napgram/infra-kit": "workspace:*",
+        "@napgram/runtime-kit": "workspace:*",
+        "@napgram/media-kit": "workspace:*"
     },
     "devDependencies": {
         "@types/node": "^25.0.3",
