--- a/packages/runtime-kit/package.json
+++ b/packages/runtime-kit/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Runtime exports for NapGram web interfaces",
     "main": "./dist/index.js",
-            "types": "./src/index.ts",
+    "types": "./src/index.ts",
     "type": "module",
     "exports": {
         ".": {
@@ -23,6 +23,9 @@
     ],
     "author": "NapGram Team",
     "license": "MIT",
+    "dependencies": {
+        "@napgram/infra-kit": "workspace:*"
+    },
     "devDependencies": {
         "@types/node": "^25.0.3",
         "typescript": "^5.9.3"
