fix(types): resolve implicit any type errors across codebase
- Add explicit type annotations in CommandsFeature.test.ts
- Fix implicit any in database.ts map/catch callbacks
- Fix implicit any in instances.ts map callbacks
- Add @napgram/plugin-kit path mapping to main/tsconfig.json
- Fix authMiddleware import to use @napgram/auth-kit

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,15 +17,17 @@ updates:
     commit-message:
       prefix: "chore(deps)"
       prefix-development: "chore(deps-dev)"
-
-    groups:
-      all-deps:
-        patterns:
-          - "*"
-        # 排除内部包
-        exclude-patterns:
-          - "@napgram/*"
-          - "@naplink/*"
+    
+    # Temporarily disabled: grouped updates cause failures in complex workspace
+    # See: https://github.com/NapGram/NapGram/actions/runs/20653950893
+    # groups:
+    #   all-deps:
+    #     patterns:
+    #       - "*"
+    #     # 排除内部包
+    #     exclude-patterns:
+    #       - "@napgram/*"
+    #       - "@naplink/*"
     
     ignore:
       - dependency-name: "@naplink/naplink"
