--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -47,6 +47,90 @@
       "@napgram/web-interfaces": [
         "../packages/web-interfaces/src/index.ts"
       ],
+      "@napgram/plugin-adapter-qq-napcat": [
+        "../packages/plugin-adapter-qq-napcat/src/index.ts"
+      ],
+      "@napgram/plugin-adapter-telegram-mtcute": [
+        "../packages/plugin-adapter-telegram-mtcute/src/index.ts"
+      ],
+      "@napgram/plugin-admin-auth": [
+        "../packages/plugin-admin-auth/src/index.ts"
+      ],
+      "@napgram/plugin-admin-database": [
+        "../packages/plugin-admin-database/src/index.ts"
+      ],
+      "@napgram/plugin-admin-instances": [
+        "../packages/plugin-admin-instances/src/index.ts"
+      ],
+      "@napgram/plugin-admin-logs": [
+        "../packages/plugin-admin-logs/src/index.ts"
+      ],
+      "@napgram/plugin-admin-messages": [
+        "../packages/plugin-admin-messages/src/index.ts"
+      ],
+      "@napgram/plugin-admin-pairs": [
+        "../packages/plugin-admin-pairs/src/index.ts"
+      ],
+      "@napgram/plugin-admin-plugins": [
+        "../packages/plugin-admin-plugins/src/index.ts"
+      ],
+      "@napgram/plugin-admin-settings": [
+        "../packages/plugin-admin-settings/src/index.ts"
+      ],
+      "@napgram/plugin-admin-suite": [
+        "../packages/plugin-admin-suite/src/index.ts"
+      ],
+      "@napgram/plugin-commands": [
+        "../packages/plugin-commands/src/index.ts"
+      ],
+      "@napgram/plugin-flags": [
+        "../packages/plugin-flags/src/index.ts"
+      ],
+      "@napgram/plugin-forward": [
+        "../packages/plugin-forward/src/index.ts"
+      ],
+      "@napgram/plugin-gateway": [
+        "../packages/plugin-gateway/src/index.ts"
+      ],
+      "@napgram/plugin-group-management": [
+        "../packages/plugin-group-management/src/index.ts"
+      ],
+      "@napgram/plugin-media": [
+        "../packages/plugin-media/src/index.ts"
+      ],
+      "@napgram/plugin-monitoring": [
+        "../packages/plugin-monitoring/src/index.ts"
+      ],
+      "@napgram/plugin-notifications": [
+        "../packages/plugin-notifications/src/index.ts"
+      ],
+      "@napgram/plugin-ping-pong": [
+        "../packages/plugin-ping-pong/src/index.ts"
+      ],
+      "@napgram/plugin-qq-interaction": [
+        "../packages/plugin-qq-interaction/src/index.ts"
+      ],
+      "@napgram/plugin-recall": [
+        "../packages/plugin-recall/src/index.ts"
+      ],
+      "@napgram/plugin-refresh": [
+        "../packages/plugin-refresh/src/index.ts"
+      ],
+      "@napgram/plugin-request-handler": [
+        "../packages/plugin-request-handler/src/index.ts"
+      ],
+      "@napgram/plugin-request-management": [
+        "../packages/plugin-request-management/src/index.ts"
+      ],
+      "@napgram/plugin-statistics": [
+        "../packages/plugin-statistics/src/index.ts"
+      ],
+      "@napgram/plugin-web-assets": [
+        "../packages/plugin-web-assets/src/index.ts"
+      ],
+      "@napgram/plugin-web-console": [
+        "../packages/plugin-web-console/src/index.ts"
+      ],
       "@napgram/app/*": [
         "./src/*"
       ]
