--- a/packages/request-kit/package.json
+++ b/packages/request-kit/package.json
@@ -29,7 +29,7 @@
         "@napgram/qq-client": "workspace:*"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
