--- a/main/package.json
+++ b/main/package.json
@@ -1,81 +1,81 @@
 {
-  "name": "@napgram/app",
-  "type": "module",
-  "version": "0.1.4",
-  "files": [
-    "assets",
-    "build"
-  ],
-  "engines": {
-    "node": ">=22.0.0"
-  },
-  "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsx build.ts",
-    "lint": "eslint .",
-    "type-check": "tsc --noEmit",
-    "pretype-check": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate --no-hints",
-    "postinstall": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate --no-hints",
-    "start": "prisma migrate deploy && node --enable-source-maps build/index.js",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "pretest": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate --no-hints",
-    "prisma": "prisma",
-    "import": "ts-node tools/import"
-  },
-  "dependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "@fastify/cors": "^11.2.0",
-    "@fastify/static": "^9.0.0",
-    "@kitajs/html": "^4.2.11",
-    "@mtcute/core": "^0.27.4",
-    "@mtcute/dispatcher": "^0.27.4",
-    "@mtcute/markdown-parser": "^0.27.4",
-    "@mtcute/node": "^0.27.4",
-    "@napgram/auth-kit": "workspace:*",
-    "@napgram/feature-kit": "workspace:*",
-    "@napgram/gateway-kit": "workspace:*",
-    "@napgram/infra-kit": "workspace:*",
-    "@napgram/marketplace-kit": "workspace:*",
-    "@napgram/media-kit": "workspace:*",
-    "@napgram/message-kit": "workspace:*",
-    "@napgram/plugin-kit": "workspace:*",
-    "@napgram/qq-client": "workspace:*",
-    "@napgram/request-kit": "workspace:*",
-    "@napgram/runtime-kit": "workspace:*",
-    "@napgram/telegram-client": "workspace:*",
-    "@napgram/web-interfaces": "workspace:*",
-    "@naplink/naplink": "^0.0.3",
-    "@prisma/adapter-pg": "7.2.0",
-    "@prisma/client": "7.2.0",
-    "@sentry/node": "^10.32.1",
-    "fastify": "^5.6.2",
-    "fflate": "^0.8.2",
-    "file-type": "^21.2.0",
-    "image-js": "^1.3.0",
-    "pg": "^8.16.3",
-    "prisma": "7.2.0",
-    "silk-wasm": "^3.7.1",
-    "ws": "^8.18.3",
-    "yaml": "^2.8.2",
-    "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "@antfu/eslint-config": "^6.7.3",
-    "@kitajs/ts-html-plugin": "^4.1.3",
-    "@types/ejs": "^3.1.5",
-    "@types/markdown-escape": "^1.1.3",
-    "@types/node": "^25.0.3",
-    "@types/pg": "^8.16.0",
-    "@types/probe-image-size": "^7.2.5",
-    "@types/tmp": "^0.2.6",
-    "@types/ws": "^8.18.1",
-    "@vitest/coverage-v8": "^4.0.16",
-    "esbuild": "^0.27.2",
-    "eslint": "^9.39.2",
-    "tsx": "^4.21.0",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.16"
-  }
+    "name": "@napgram/app",
+    "type": "module",
+    "version": "0.1.4",
+    "files": [
+        "assets",
+        "build"
+    ],
+    "engines": {
+        "node": ">=22.0.0"
+    },
+    "scripts": {
+        "dev": "tsx watch src/index.ts",
+        "build": "tsx build.ts",
+        "lint": "eslint .",
+        "type-check": "tsc --noEmit",
+        "pretype-check": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate --no-hints",
+        "postinstall": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate --no-hints",
+        "start": "prisma migrate deploy && node --enable-source-maps build/index.js",
+        "test": "vitest",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --coverage",
+        "pretest": "DATABASE_URL=postgresql://dummy pnpm exec prisma generate --no-hints",
+        "prisma": "prisma",
+        "import": "ts-node tools/import"
+    },
+    "dependencies": {
+        "@fastify/cookie": "^11.0.2",
+        "@fastify/cors": "^11.2.0",
+        "@fastify/static": "9.0.0",
+        "@kitajs/html": "^4.2.11",
+        "@mtcute/core": "^0.27.4",
+        "@mtcute/dispatcher": "^0.27.4",
+        "@mtcute/markdown-parser": "^0.27.4",
+        "@mtcute/node": "^0.27.4",
+        "@napgram/auth-kit": "workspace:*",
+        "@napgram/feature-kit": "workspace:*",
+        "@napgram/gateway-kit": "workspace:*",
+        "@napgram/infra-kit": "workspace:*",
+        "@napgram/marketplace-kit": "workspace:*",
+        "@napgram/media-kit": "workspace:*",
+        "@napgram/message-kit": "workspace:*",
+        "@napgram/plugin-kit": "workspace:*",
+        "@napgram/qq-client": "workspace:*",
+        "@napgram/request-kit": "workspace:*",
+        "@napgram/runtime-kit": "workspace:*",
+        "@napgram/telegram-client": "workspace:*",
+        "@napgram/web-interfaces": "workspace:*",
+        "@naplink/naplink": "^0.0.3",
+        "@prisma/adapter-pg": "7.2.0",
+        "@prisma/client": "7.2.0",
+        "@sentry/node": "10.32.1",
+        "fastify": "5.6.2",
+        "fflate": "^0.8.2",
+        "file-type": "^21.2.0",
+        "image-js": "^1.3.0",
+        "pg": "^8.16.3",
+        "prisma": "7.2.0",
+        "silk-wasm": "^3.7.1",
+        "ws": "^8.18.3",
+        "yaml": "^2.8.2",
+        "zod": "^4.3.4"
+    },
+    "devDependencies": {
+        "@antfu/eslint-config": "^6.7.3",
+        "@kitajs/ts-html-plugin": "^4.1.3",
+        "@types/ejs": "^3.1.5",
+        "@types/markdown-escape": "^1.1.3",
+        "@types/node": "25.0.3",
+        "@types/pg": "^8.16.0",
+        "@types/probe-image-size": "^7.2.5",
+        "@types/tmp": "^0.2.6",
+        "@types/ws": "^8.18.1",
+        "@vitest/coverage-v8": "4.0.16",
+        "esbuild": "^0.27.2",
+        "eslint": "9.39.2",
+        "tsx": "^4.21.0",
+        "typescript": "5.9.3",
+        "vitest": "4.0.16"
+    }
 }
