--- a/packages/auth-kit/package.json
+++ b/packages/auth-kit/package.json
@@ -24,13 +24,13 @@
     "author": "NapGram Team",
     "license": "MIT",
     "dependencies": {
-        "fastify": "^5.6.2",
         "@napgram/infra-kit": "workspace:*",
-        "@napgram/qq-client": "workspace:*"
+        "@napgram/qq-client": "workspace:*",
+        "fastify": "5.6.2"
     },
     "devDependencies": {
         "@fastify/cookie": "^11.0.2",
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
