--- a/packages/feature-kit/package.json
+++ b/packages/feature-kit/package.json
@@ -28,20 +28,20 @@
         "@mtcute/core": "^0.27.4",
         "@mtcute/markdown-parser": "^0.27.4",
         "@mtcute/node": "^0.27.4",
-        "file-type": "^21.2.0",
-        "image-js": "^1.3.0",
-        "@napgram/message-kit": "workspace:*",
-        "@napgram/infra-kit": "workspace:*",
-        "@napgram/runtime-kit": "workspace:*",
-        "@napgram/media-kit": "workspace:*",
-        "@napgram/qq-client": "workspace:*",
-        "@napgram/telegram-client": "workspace:*",
         "@napgram/auth-kit": "workspace:*",
-        "@napgram/plugin-kit": "workspace:*"
+        "@napgram/infra-kit": "workspace:*",
+        "@napgram/media-kit": "workspace:*",
+        "@napgram/message-kit": "workspace:*",
+        "@napgram/plugin-kit": "workspace:*",
+        "@napgram/qq-client": "workspace:*",
+        "@napgram/runtime-kit": "workspace:*",
+        "@napgram/telegram-client": "workspace:*",
+        "file-type": "^21.2.0",
+        "image-js": "^1.3.0"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3",
-        "vitest": "^4.0.16"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3",
+        "vitest": "4.0.16"
     }
 }
