--- a/packages/gateway-kit/package.json
+++ b/packages/gateway-kit/package.json
@@ -20,10 +20,10 @@
     "dependencies": {
         "@mtcute/core": "^0.27.4",
         "@mtcute/node": "^0.27.4",
+        "@napgram/infra-kit": "workspace:*",
         "@napgram/message-kit": "workspace:*",
         "@napgram/qq-client": "workspace:*",
         "@napgram/telegram-client": "workspace:*",
-        "@napgram/infra-kit": "workspace:*",
         "ws": "^8.18.3"
     },
     "keywords": [
@@ -33,8 +33,8 @@
     "author": "NapGram Team",
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^25.0.3",
+        "@types/node": "25.0.3",
         "@types/ws": "^8.18.1",
-        "typescript": "^5.9.3"
+        "typescript": "5.9.3"
     }
 }
