--- a/packages/infra-kit/package.json
+++ b/packages/infra-kit/package.json
@@ -28,15 +28,15 @@
         "@napgram/telegram-client": "workspace:^",
         "@prisma/adapter-pg": "7.2.0",
         "@prisma/client": "7.2.0",
-        "@sentry/node": "^10.32.1",
-        "fastify": "^5.6.2",
+        "@sentry/node": "10.32.1",
+        "fastify": "5.6.2",
         "pg": "^8.16.3",
-        "zod": "^3.24.1"
+        "zod": "^4.3.4"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
+        "@types/node": "25.0.3",
         "@types/pg": "^8.16.0",
-        "typescript": "^5.9.3",
-        "vitest": "^4.0.16"
+        "typescript": "5.9.3",
+        "vitest": "4.0.16"
     }
 }
