--- a/packages/marketplace-kit/package.json
+++ b/packages/marketplace-kit/package.json
@@ -25,13 +25,13 @@
     "author": "NapGram Team",
     "license": "MIT",
     "dependencies": {
-        "fflate": "^0.8.2",
-        "yaml": "^2.8.2",
         "@napgram/infra-kit": "workspace:*",
-        "@napgram/runtime-kit": "workspace:*"
+        "@napgram/runtime-kit": "workspace:*",
+        "fflate": "^0.8.2",
+        "yaml": "^2.8.2"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
