--- a/packages/message-kit/package.json
+++ b/packages/message-kit/package.json
@@ -26,14 +26,14 @@
     "license": "MIT",
     "dependencies": {
         "@mtcute/core": "^0.27.4",
-        "file-type": "^21.2.0",
-        "image-js": "^1.3.0",
         "@napgram/infra-kit": "workspace:*",
+        "@napgram/media-kit": "workspace:*",
         "@napgram/runtime-kit": "workspace:*",
-        "@napgram/media-kit": "workspace:*"
+        "file-type": "^21.2.0",
+        "image-js": "^1.3.0"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
