--- a/packages/plugin-adapter-telegram-mtcute/package.json
+++ b/packages/plugin-adapter-telegram-mtcute/package.json
@@ -27,9 +27,9 @@
     "author": "NapGram Team",
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3",
-        "@napgram/sdk": "workspace:*"
+        "@napgram/sdk": "workspace:*",
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     },
     "dependencies": {
         "@napgram/telegram-client": "workspace:*"
