--- a/packages/plugin-kit/package.json
+++ b/packages/plugin-kit/package.json
@@ -18,16 +18,16 @@
         "@napgram/marketplace-kit": "workspace:^",
         "@napgram/message-kit": "workspace:*",
         "@napgram/runtime-kit": "workspace:*",
-        "@sentry/node": "^7.80.0",
-        "axios": "^1.6.2",
-        "semver": "^7.5.4",
+        "@sentry/node": "10.32.1",
+        "axios": "^1.13.2",
+        "semver": "^7.7.3",
         "yaml": "^2.8.2",
-        "zod": "^3.22.4"
+        "zod": "4.3.4"
     },
     "devDependencies": {
-        "@types/node": "^20.10.4",
-        "@types/semver": "^7.5.6",
-        "typescript": "^5.3.3",
-        "vitest": "^1.0.4"
+        "@types/node": "25.0.3",
+        "@types/semver": "^7.7.1",
+        "typescript": "5.9.3",
+        "vitest": "4.0.16"
     }
 }
