--- a/packages/plugin-notifications/package.json
+++ b/packages/plugin-notifications/package.json
@@ -25,8 +25,8 @@
     "author": "NapGram Team",
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3",
-        "@napgram/sdk": "workspace:*"
+        "@napgram/sdk": "workspace:*",
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
