--- a/packages/plugin-statistics/package.json
+++ b/packages/plugin-statistics/package.json
@@ -25,9 +25,9 @@
     "author": "NapGram Team",
     "license": "MIT",
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3",
         "@napgram/sdk": "workspace:*",
-        "@napgram/web-interfaces": "workspace:*"
+        "@napgram/web-interfaces": "workspace:*",
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
