--- a/packages/qq-client/package.json
+++ b/packages/qq-client/package.json
@@ -29,7 +29,7 @@
         "@naplink/naplink": "^0.0.3"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
