--- a/packages/telegram-client/package.json
+++ b/packages/telegram-client/package.json
@@ -30,7 +30,7 @@
         "@mtcute/node": "^0.27.4"
     },
     "devDependencies": {
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
