--- a/packages/web-interfaces/package.json
+++ b/packages/web-interfaces/package.json
@@ -23,8 +23,8 @@
         "@napgram/message-kit": "workspace:*",
         "@napgram/plugin-kit": "workspace:*",
         "@napgram/telegram-client": "workspace:*",
-        "fastify": "^5.6.2",
-        "zod": "^4.2.1"
+        "fastify": "5.6.2",
+        "zod": "4.3.4"
     },
     "keywords": [
         "napgram",
@@ -38,7 +38,7 @@
         "@kitajs/ts-html-plugin": "^4.1.3",
         "@napgram/infra-kit": "workspace:*",
         "@napgram/runtime-kit": "workspace:*",
-        "@types/node": "^25.0.3",
-        "typescript": "^5.9.3"
+        "@types/node": "25.0.3",
+        "typescript": "5.9.3"
     }
 }
