build: cleanup prisma tools and update docker configuration for drizzle

--- a/packages/request-kit/package.json
+++ b/packages/request-kit/package.json
@@ -26,7 +26,8 @@
     "license": "MIT",
     "dependencies": {
         "@napgram/infra-kit": "workspace:*",
-        "@napgram/qq-client": "workspace:*"
+        "@napgram/qq-client": "workspace:*",
+        "drizzle-orm": "^0.45.1"
     },
     "devDependencies": {
         "@types/node": "25.0.3",
