--- a/packages/infra-kit/package.json
+++ b/packages/infra-kit/package.json
@@ -39,9 +39,8 @@
         "@napgram/qq-client": "workspace:^",
         "@napgram/telegram-client": "workspace:^",
         "@napgram/database": "workspace:*",
-        "@prisma/adapter-pg": "7.2.0",
-        "@prisma/client": "7.2.0",
         "@sentry/node": "10.32.1",
+        "drizzle-orm": "^0.45.1",
         "fastify": "5.6.2",
         "zod": "^4.3.4"
     },
