--- a/packages/request-kit/package.json
+++ b/packages/request-kit/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "@napgram/infra-kit": "workspace:*",
         "@napgram/qq-client": "workspace:*",
+        "@napgram/runtime-kit": "workspace:*",
         "drizzle-orm": "^0.45.1"
     },
     "devDependencies": {
