--- a/packages/runtime-kit/package.json
+++ b/packages/runtime-kit/package.json
@@ -48,6 +48,7 @@
     "dependencies": {
         "@napgram/infra-kit": "workspace:*",
         "@napgram/media-kit": "workspace:*",
+        "@napgram/qq-client": "workspace:*",
         "@napgram/telegram-client": "workspace:*",
         "yaml": "^2.8.2"
     },
