--- a/packages/message-kit/package.json
+++ b/packages/message-kit/package.json
@@ -42,6 +42,7 @@
         "@mtcute/core": "^0.27.4",
         "@napgram/infra-kit": "workspace:*",
         "@napgram/media-kit": "workspace:*",
+        "@napgram/qq-client": "workspace:*",
         "@napgram/runtime-kit": "workspace:*",
         "file-type": "^21.2.0",
         "image-js": "^1.3.0"
