--- a/packages/plugin-adapter-qq-napcat/package.json
+++ b/packages/plugin-adapter-qq-napcat/package.json
@@ -26,10 +26,10 @@
     "author": "NapGram Team",
     "license": "MIT",
     "dependencies": {
-        "@napgram/qq-client": "workspace:*"
+        "@napgram/qq-client": "workspace:*",
+        "@napgram/sdk": "^0.1.3"
     },
     "devDependencies": {
-        "@napgram/sdk": "^0.1.3",
         "@types/node": "25.0.3",
         "typescript": "5.9.3"
     },
