--- a/packages/plugin-kit/package.json
+++ b/packages/plugin-kit/package.json
@@ -38,6 +38,7 @@
         "@napgram/marketplace-kit": "workspace:^",
         "@napgram/message-kit": "workspace:*",
         "@napgram/runtime-kit": "workspace:*",
+        "@napgram/sdk": "^0.1.3",
         "@sentry/node": "10.32.1",
         "axios": "^1.13.2",
         "semver": "^7.7.3",
