--- a/packages/plugin-ping-pong/package.json
+++ b/packages/plugin-ping-pong/package.json
@@ -25,7 +25,6 @@
     "author": "NapGram Team",
     "license": "MIT",
     "devDependencies": {
-        "@napgram/sdk": "^0.1.3",
         "@types/node": "25.0.3",
         "typescript": "5.9.3"
     },
@@ -40,5 +39,8 @@
             },
             "./package.json": "./package.json"
         }
+    },
+    "dependencies": {
+        "@napgram/sdk": "^0.1.3"
     }
 }
