--- a/packages/plugin-refresh/package.json
+++ b/packages/plugin-refresh/package.json
@@ -26,7 +26,6 @@
     "author": "NapLink",
     "license": "MIT",
     "devDependencies": {
-        "@napgram/sdk": "^0.1.3",
         "@types/node": "25.0.3",
         "typescript": "5.9.3"
     },
@@ -41,5 +40,8 @@
             },
             "./package.json": "./package.json"
         }
+    },
+    "dependencies": {
+        "@napgram/sdk": "^0.1.3"
     }
 }
