--- a/packages/plugin-web-assets/package.json
+++ b/packages/plugin-web-assets/package.json
@@ -26,7 +26,6 @@
     "author": "NapGram Team",
     "license": "MIT",
     "devDependencies": {
-        "@napgram/sdk": "^0.1.3",
         "@napgram/web-interfaces": "workspace:*",
         "@types/node": "25.0.3",
         "typescript": "5.9.3"
@@ -42,5 +41,8 @@
             },
             "./package.json": "./package.json"
         }
+    },
+    "dependencies": {
+        "@napgram/sdk": "^0.1.3"
     }
 }
