fix(tsconfig): map napgram sdk path

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -47,6 +47,9 @@
             "@napgram/plugin-kit": [
                 "packages/plugin-kit/src/index.ts"
             ],
+            "@napgram/sdk": [
+                "external/sdk/packages/sdk/src/index.ts"
+            ],
             "@napgram/app/*": [
                 "main/src/*"
             ]
